--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pandas==0.25.3
 pyhunter==1.3
 pyperclip==1.7.0
 python-dateutil==2.8.1
+python-dotenv==0.11.0
 pytz==2019.3
 requests==2.22.0
 selenium==3.141.0
